<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dinasaad.bakingapp.DetailActivity"
    android:name="com.example.dinasaad.bakingapp.DetailFragment"

    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>


    <!--
        android:background="@drawable/background"
    -->
