<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/IngedientsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-8dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="4px"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:nestedScrollingEnabled="true"
        />
</LinearLayout>